cli/hypercode-rs/tui2/src/chatwidget/snapshots/hypercode_tui__chatwidget__tests__model_selection_popup.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  Select Model and Effort
  Access legacy models by running hypercode -m <model_name> or in your config.toml

› 1. gpt-5.1-codex-max   Latest Hypercode-optimized flagship for deep and fast
                         reasoning.
  2. gpt-5.1-codex       Optimized for hypercode.
  3. gpt-5.1-codex-mini  Optimized for hypercode. Cheaper, faster, but less
                         capable.
  4. gpt-5.1             Broad world knowledge with strong general reasoning.

  Press enter to select reasoning effort, or esc to dismiss.
